--- a/src/BlazorHeightmaps.Wasm.App/_Imports.razor
+++ b/src/BlazorHeightmaps.Wasm.App/_Imports.razor
@@ -1,7 +1,20 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Numerics
+@using System.Text
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
+
+@using Ambacht.Common
+@using Ambacht.Common.Mathmatics
+@using Ambacht.Common.Serialization
+@using Ambacht.Common.Services
+@using Ambacht.Common.UX
+@using Ambacht.Common.Maps
+@using Ambacht.Common.Maps.Tiles
+
 @using BlazorHeightmaps.Wasm.App
+@using BlazorHeightmaps.Wasm.App.Components
