--- a/src/BlazorHeightmaps.Wasm.App/Pages/Index.razor
+++ b/src/BlazorHeightmaps.Wasm.App/Pages/Index.razor
@@ -1,5 +1,18 @@
 ﻿@page "/"
 
-<SlippyMap Latitude="52" Longitude="4" ZoomLevel="10" Class="w-screen h-screen overflow-hidden">
+<SlippyMap @bind-Center="_state.Center" @bind-ZoomLevel="_state.ZoomLevel" Class="w-screen h-screen overflow-hidden">
+  
 
 </SlippyMap>
+
+
+@code
+{
+
+	private State _state = new State()
+	{
+		Center = new(52.08f, 5.1f),
+		ZoomLevel = 13
+	};
+
+}
