--- a/src/BlazorHeightmaps.Wasm.App/_Imports.razor
+++ b/src/BlazorHeightmaps.Wasm.App/_Imports.razor
@@ -16,5 +16,9 @@
 @using Ambacht.Common.Maps
 @using Ambacht.Common.Maps.Tiles
 
+@using Ambacht.Common.Blazor.Components
+@using Ambacht.Common.Blazor.Services
+@using Ambacht.Common.Blazor.Svg
+
 @using BlazorHeightmaps.Wasm.App
 @using BlazorHeightmaps.Wasm.App.Components
