--- a/src/BlazorHeightmaps.Wasm.App/Pages/Values.razor
+++ b/src/BlazorHeightmaps.Wasm.App/Pages/Values.razor
@@ -2,7 +2,9 @@
 <div class="absolute w-100 h-40 z-20 p-2">
   <button class="p-4 mx-2 bg-[#252b48] text-[#ffffff] inline-block">HOI!</button>
   <button class="p-4 mx-2 bg-[#445069] text-[#ffffff] inline-block">HOI 2!</button>
-  <button class="p-4 mx-2 bg-[#5b9a8b] text-[#ffffff] inline-block">HOI 3!</button>
+  <button class="p-4 mx-2 bg-[#5b9a8b] text-[#ffffff] inline-block">HOI 3!</button> 
+  
+  <button class="border-1 border-[#444444] p-2">Button (normal)</button>
 
 </div>
 
