--- a/src/BlazorHeightmaps.Wasm.App/Pages/Index.razor
+++ b/src/BlazorHeightmaps.Wasm.App/Pages/Index.razor
@@ -3,6 +3,7 @@
 <CascadingValue Value="@_state">
   <Toolbar />
   <SlippyMap @bind-Center="_state.Center" @bind-ZoomAmount="_state.Zoom" Class="w-screen h-screen overflow-hidden">
+    <SlippyTileLayer />
 
     <Overlay />
 
