--- a/src/Ambacht.Common.Blazor/Svg/SvgFit.razor
+++ b/src/Ambacht.Common.Blazor/Svg/SvgFit.razor
@@ -9,7 +9,7 @@
 
     // These bounds will be contained
     [Parameter()]
-    public Rectangle Bounds { get; set; }
+    public Rectangle<float> Bounds { get; set; }
 
     [Parameter()]
     public RenderFragment ChildContent { get; set; }
