Moved slippy map to separate assembly

--- a/src/Ambacht.Common.Maps.Blazor/Components/SlippyMap.razor
+++ b/src/Ambacht.Common.Maps.Blazor/Components/SlippyMap.razor
@@ -1,4 +1,6 @@
-﻿@inject IJSRuntime JsRuntime
+﻿@using Ambacht.Common.Maps.Tiles
+@using Ambacht.Common.Mathmatics
+@inject IJSRuntime JsRuntime
 
 <div @ref="_container" class="map-container"
      @onmousedown="OnMouseDown"
