--- a/src/Ambacht.Common.Maps.Blazor/Components/SlippyMap.razor
+++ b/src/Ambacht.Common.Maps.Blazor/Components/SlippyMap.razor
@@ -14,7 +14,9 @@
 </div>
 
 <style>
-  div.map-container {
+
+  .map-container {
+    position: relative;
     width: 100%;
     height: 100%;
     padding: 0px;
@@ -23,13 +25,16 @@
     overflow-y: hidden;
   }
 
-  img.tile {
+  .map-layer {
     position: absolute;
-    user-select: none;
-    pointer-events: none;
-    touch-action: none;
-    z-index: -10;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
+
 </style>
 
 @code {
@@ -72,7 +77,7 @@
 
   protected override async Task OnAfterRenderAsync(bool firstRender)
   {
-    var sizes = await JsRuntime.InvokeAsync<int[]>("Ambacht.getSize", _container);
+    var sizes = await JsRuntime.InvokeAsync<double[]>("Ambacht.getSize", _container);
     var size = new Vector2<double>(sizes[0], sizes[1]);
     await SetView(_view with {
       Coords = Center,
